# docker-prefect

./: Dockerfile  create_pytrends_report-deployment.yaml  docker_deploy.sh  pr-docker-deployment.yaml  prefect-docker-deployment.yaml  pyproject.toml  requirements.txt
project/: get_data.py  main.py  prefect-docker-deployment.yaml
